--- a/frontend/src/app/features/invoices/list/invoices-list.html
+++ b/frontend/src/app/features/invoices/list/invoices-list.html
@@ -11,11 +11,12 @@
   </div>
 
   <div class="bg-white rounded-lg shadow-sm border border-gray-200 p-6">
-    <p-table [value]="invoices" [paginator]="true" [rows]="10">
+    <p-table [value]="filteredInvoices()" [paginator]="true" [rows]="10" [loading]="loading()">
       <ng-template pTemplate="header">
         <tr>
           <th>ID</th>
           <th>Patient</th>
+          <th>Type</th>
           <th>Date</th>
           <th>Total Amount</th>
           <th>Payment Status</th>
@@ -24,14 +25,16 @@
       </ng-template>
       <ng-template pTemplate="body" let-invoice>
         <tr>
-          <td>{{ invoice.id }}</td>
-          <td>{{ invoice.patient }}</td>
-          <td>{{ invoice.date }}</td>
-          <td>{{ invoice.totalAmount }}</td>
-          <td><p-tag [value]="invoice.paymentStatus" [severity]="getStatusSeverity(invoice.paymentStatus)"></p-tag></td>
+          <td>{{ invoice.invoiceID }}</td>
+          <td>{{ invoice.patientName }}</td>
+          <td>{{ invoice.invoiceTypeName }}</td>
+          <td>{{ invoice.invoiceDate | date:'mediumDate' }}</td>
+          <td>{{ invoice.totalAmount | currency }}</td>
+          <td><p-tag [value]="invoice.paymentStatusName"
+              [severity]="getStatusSeverity(invoice.paymentStatusName)"></p-tag></td>
           <td>
             <div class="flex gap-2">
-              <a [routerLink]="['/invoices', invoice.id]" class="p-button p-button-text p-button-sm">
+              <a [routerLink]="['/invoices', invoice.invoiceID]" class="p-button p-button-text p-button-sm">
                 <i class="pi pi-eye"></i>
               </a>
               <button pButton pRipple type="button" icon="pi pi-pencil" class="p-button-text p-button-sm"></button>
@@ -42,4 +45,3 @@
     </p-table>
   </div>
 </div>
-
